--- a/department-frontend/package.json
+++ b/department-frontend/package.json
@@ -9,8 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.2",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.9.4",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.10.2",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +41,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.16"
   }
 }
